--- a/examples/myfaces20-example/src/main/webapp/WEB-INF/web.xml
+++ b/examples/myfaces20-example/src/main/webapp/WEB-INF/web.xml
@@ -18,13 +18,13 @@
  * specific language governing permissions and limitations
  * under the License.
 -->
-<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
 
     <description>MyProject web.xml</description>
 
 
-  
     <context-param>
         <description>
             Initializes the plugins for our groovy handlers
@@ -34,13 +34,13 @@
     </context-param>
 
 
-    <!--
     <context-param>
         <description>Additional comma separated loader paths to allow direct editing on the sources directory instead
             of the deployment dir
         </description>
         <param-name>org.apache.myfaces.scripting.groovy.LOADER_PATHS</param-name>
-        <param-value>/Users/werpu2/development/workspace/extensions-scripting3/examples/myfaces20-example/src/main/webapp/WEB-INF/groovy
+        <param-value>
+            /Users/werpu2/development/workspace/extensions-scripting3/examples/myfaces20-example/src/main/webapp/WEB-INF/groovy
         </param-value>
     </context-param>
 
@@ -50,10 +50,11 @@
             of the deployment dir
         </description>
         <param-name>org.apache.myfaces.scripting.java.LOADER_PATHS</param-name>
-        <param-value>/Users/werpu2/development/workspace/extensions-scripting3/examples/myfaces20-example/src/main/webapp/WEB-INF/java
+        <param-value>
+            /Users/werpu2/development/workspace/extensions-scripting3/examples/myfaces20-example/src/main/webapp/WEB-INF/java
         </param-value>
     </context-param>
-    -->
+
 
     <!--
      <context-param>
@@ -74,21 +75,25 @@
     </context-param>
 
 
-    <context-param>
-        <description>additional comma separated resource pickup paths</description>
-        <param-name>org.apache.myfaces.scripting.resources.LOADER_PATHS</param-name>
-        <param-value>D:/dev/work/ideaprojects/threads/extscript/examples/myfaces20-example/src/main/webapp/WEB-INF/java</param-value>
-    </context-param>
     -->
+
+    <context-param>
+        <param-name>javax.faces.PROJECT_STAGE</param-name>
+        <param-value>Development</param-value>
+    </context-param>
 
     <context-param>
         <description>resource paths for our custom facelet resource resolver</description>
         <param-name>org.apache.myfaces.scripting.resources.LOADER_PATHS</param-name>
-        <param-value>/Users/werpu2/development/workspace/extensions-scripting3/examples/myfaces20-example/src/main/webapp</param-value>
+        <param-value>
+            /Users/werpu2/development/workspace/extensions-scripting3/examples/myfaces20-example/src/main/webapp
+        </param-value>
     </context-param>
 
     <context-param>
-        <description>a redirecting Facelet resource resolver which allows to pick up templates and resources from our source dir</description>
+        <description>a redirecting Facelet resource resolver which allows to pick up templates and resources from our
+            source dir
+        </description>
         <param-name>facelets.RESOURCE_RESOLVER</param-name>
         <param-value>org.apache.myfaces.scripting.facelet.ReroutingResourceResolver</param-value>
     </context-param>
@@ -106,7 +111,6 @@
     </context-param>
 
 
-
     <filter>
         <filter-name>scriptingFilter</filter-name>
         <filter-class>org.apache.myfaces.scripting.servlet.ScriptingServletFilter</filter-class>
@@ -119,9 +123,9 @@
         <dispatcher>INCLUDE</dispatcher>
         <dispatcher>ERROR</dispatcher>
     </filter-mapping>
-  
+
     <!-- Listener, to allow Jetty serving MyFaces apps -->
-     <listener>
+    <listener>
         <listener-class>org.apache.myfaces.webapp.StartupServletContextListener</listener-class>
     </listener>
 
@@ -139,9 +143,9 @@
     </servlet-mapping>
 
     <servlet-mapping>
-          <servlet-name>Faces Servlet</servlet-name>
-          <url-pattern>/faces/*</url-pattern>
-      </servlet-mapping>
+        <servlet-name>Faces Servlet</servlet-name>
+        <url-pattern>/faces/*</url-pattern>
+    </servlet-mapping>
 
 
     <!-- Welcome files -->
