--- a/examples/myfaces12-example/src/main/webapp/WEB-INF/web.xml
+++ b/examples/myfaces12-example/src/main/webapp/WEB-INF/web.xml
@@ -44,7 +44,6 @@
         <param-name>org.apache.myfaces.FACES_INIT_PLUGINS</param-name>
         <param-value>org.apache.myfaces.scripting.servlet.StartupServletContextPluginChainLoader</param-value>
     </context-param>
-    <!--
 
 
     <context-param>
@@ -66,7 +65,24 @@
             /Users/werpu2/development/workspace/extensions-scripting3/examples/myfaces12-example/src/main/webapp/WEB-INF/java
         </param-value>
     </context-param>
-    -->
+
+
+    <context-param>
+        <description>resource paths for our custom JSF2 resource resolver</description>
+        <param-name>org.apache.myfaces.scripting.resources.LOADER_PATHS</param-name>
+        <param-value>
+            /Users/werpu2/development/workspace/extensions-scripting3/examples/myfaces12-example/src/main/webapp
+        </param-value>
+    </context-param>
+
+    <context-param>
+         <description>a redirecting Facelet resource resolver which allows to pick up templates and resources from our
+             source dir
+         </description>
+         <param-name>facelets.RESOURCE_RESOLVER</param-name>
+         <param-value>org.apache.myfaces.scripting.facelet.ReroutingResourceResolver</param-value>
+     </context-param>
+    
 
     <!--
     <context-param>
@@ -97,7 +113,7 @@
 
     <context-param>
         <param-name>facelets.LIBRARIES</param-name>
-        <param-value>/WEB-INF/tomahawk.taglib.xml;/WEB-INF/groovy-taglib.xml</param-value>
+        <param-value>/WEB-INF/facelets/groovy-taglib.xml;/WEB-INF/facelets/extscripting.taglib.xml</param-value>
     </context-param>
 
     <context-param>
