--- a/core/core/pom.xml
+++ b/core/core/pom.xml
@@ -72,6 +72,11 @@
     </dependencies>
 
     <build>
+
+        <!-- To define the plugin version in your parent POM -->
+       
+
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -105,6 +110,40 @@
                 </dependencies>
             </plugin>
 
+            <!--
+                we reuse the maven shader plugin to get rid of the
+                asm transitive dependency in the final build
+                what we will do simply is to relocate the original
+                asm packages into our own namespace to avoid
+                name conflicts
+             -->   
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>1.3.1</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <artifactSet>
+                        <includes>
+                            <artifact>asm:asm</artifact>
+                        </includes>
+                    </artifactSet>
+                    <relocations>
+                        <relocation>
+                            <pattern>org.objectweb.asm</pattern>
+                            <shadedPattern>org.apache.myfaces.scripting.org.objectweb.asm</shadedPattern>
+                        </relocation>
+                    </relocations>
+
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
