--- a/core/core-java6/pom.xml
+++ b/core/core-java6/pom.xml
@@ -2,19 +2,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>core-java6</artifactId>
+    <artifactId>extscript-core-java6</artifactId>
     <packaging>jar</packaging>
-    <name>core java6 part</name>
+    <name>Core java6 part</name>
     <version>1.0-SNAPSHOT</version>
 
     <description>
-        myfaces extension core java6 lib
+        myfaces extension scripting java6 lib
     </description>
 
 
     <parent>
         <groupId>org.apache.myfaces.extension-scripting</groupId>
-        <artifactId>core-root</artifactId>
+        <artifactId>extscript-core-root</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <repositories>
@@ -29,7 +29,7 @@
     <dependencies>
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
-            <artifactId>core</artifactId>
+            <artifactId>extscript-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
