--- a/core/core/pom.xml
+++ b/core/core/pom.xml
@@ -2,17 +2,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>core</artifactId>
+    <artifactId>extscript-core</artifactId>
     <packaging>jar</packaging>
-    <name>groovy core</name>
+    <name>MyFaces Extenion Scripting Core</name>
 
     <description>
-        groovy myfaces core lib
+        Core of the MyFaces Extension-scripting
     </description>
 
     <parent>
         <groupId>org.apache.myfaces.extension-scripting</groupId>
-        <artifactId>core-root</artifactId>
+        <artifactId>extscript-core-root</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <repositories>
