--- a/core/myfaces2-extensions/pom.xml
+++ b/core/myfaces2-extensions/pom.xml
@@ -2,7 +2,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>myfaces2-extensions</artifactId>
+    <artifactId>extscript-myfaces2-extensions</artifactId>
     <packaging>jar</packaging>
     <name>myfaces2-extensions</name>
 
@@ -12,14 +12,14 @@
 
     <parent>
         <groupId>org.apache.myfaces.extension-scripting</groupId>
-        <artifactId>core-root</artifactId>
+        <artifactId>extscript-core-root</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <dependencies>
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
-            <artifactId>core</artifactId>
+            <artifactId>extscript-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
