--- a/core/pom.xml
+++ b/core/pom.xml
@@ -2,18 +2,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>core-root</artifactId>
+    <artifactId>extscript-core-root</artifactId>
     <packaging>pom</packaging>
-    <name>groovy core engine</name>
+    <name>MyFaces Extension Scripting Core Engine</name>
     <version>1.0-SNAPSHOT</version>
 
     <description>
-        groovy myfaces core engine meta project
+         MyFaces Extension Scripting Core Meta Project
     </description>
 
     <parent>
         <groupId>org.apache.myfaces.extension-scripting</groupId>
-        <artifactId>root</artifactId>
+        <artifactId>extscript-root</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
