--- a/examples/myfaces12-example/pom.xml
+++ b/examples/myfaces12-example/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project>
     <parent>
-        <artifactId>examples</artifactId>
+        <artifactId>extscript-examples</artifactId>
         <groupId>org.apache.myfaces.extension-scripting</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -23,19 +23,19 @@
 
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
-            <artifactId>core</artifactId>
+            <artifactId>extscript-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
-            <artifactId>core-java6</artifactId>
+            <artifactId>extscript-core-java6</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
 
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
-            <artifactId>myfaces12-extensions</artifactId>
+            <artifactId>extscript-myfaces12-extensions</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
