--- a/examples/myfaces20-example/pom.xml
+++ b/examples/myfaces20-example/pom.xml
@@ -2,7 +2,7 @@
 <project>
 
     <parent>
-        <artifactId>examples</artifactId>
+        <artifactId>extscript-examples</artifactId>
         <groupId>org.apache.myfaces.extension-scripting</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -46,19 +46,19 @@
 
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
-            <artifactId>core</artifactId>
+            <artifactId>extscript-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
-            <artifactId>myfaces2-extensions</artifactId>
+            <artifactId>extscript-myfaces2-extensions</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
-            <artifactId>core-java6</artifactId>
+            <artifactId>extscript-core-java6</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
