--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -2,7 +2,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>examples</artifactId>
+    <artifactId>extscript-examples</artifactId>
     <packaging>pom</packaging>
     <name>examples submodule</name>
     <version>1.0-SNAPSHOT</version>
@@ -13,7 +13,7 @@
 
     <parent>
         <groupId>org.apache.myfaces.extension-scripting</groupId>
-        <artifactId>root</artifactId>
+        <artifactId>extscript-root</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
