--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.apache.myfaces.extension-scripting</groupId>
-    <artifactId>root</artifactId>
+    <artifactId>extscript-root</artifactId>
     <packaging>pom</packaging>
-    <name>Myfaces groovy binding project</name>
+    <name>Myfaces Extension Scripting Project</name>
     <version>1.0-SNAPSHOT</version>
 
 
