--- a/examples/myfaces20-example/src/main/webapp/WEB-INF/web.xml
+++ b/examples/myfaces20-example/src/main/webapp/WEB-INF/web.xml
@@ -31,8 +31,6 @@
         <param-value>org.apache.myfaces.scripting.servlet.StartupServletContextPluginChainLoader</param-value>
     </context-param>
 
-    <!--
-    
     <context-param>
         <description>Additional comma separated loader paths to allow direct editing on the sources directory instead
             of the deployment dir
@@ -69,7 +67,6 @@
         <param-name>facelets.RESOURCE_RESOLVER</param-name>
         <param-value>org.apache.myfaces.scripting.facelet.ReroutingResourceResolver</param-value>
     </context-param>
-     -->
     <!--
     <context-param>
         <description>a comma separated whitelist of root packages which are compiled those and nothing else
@@ -79,6 +76,7 @@
         <param-value>org.apache.myfaces.groovyloader.blog</param-value>
     </context-param>
     -->
+    
 
     <!--
      <context-param>
@@ -117,7 +115,9 @@
     </context-param>
     <context-param>
         <param-name>javax.faces.FACELETS_LIBRARIES</param-name>
-        <param-value>/WEB-INF/facelets/groovy-taglib.xml;/WEB-INF/facelets/extscripting.taglib.xml;/WEB-INF/facelets/tomahawk.taglib.xml</param-value>
+        <param-value>
+            /WEB-INF/facelets/groovy-taglib.xml;/WEB-INF/facelets/extscripting.taglib.xml;/WEB-INF/facelets/tomahawk.taglib.xml
+        </param-value>
     </context-param>
 
 
