--- a/extscript-bundles/extscript20-assembly/pom.xml
+++ b/extscript-bundles/extscript20-assembly/pom.xml
@@ -10,13 +10,13 @@
     <parent>
         <groupId>org.apache.myfaces.extension-scripting</groupId>
         <artifactId>extscript-bundles</artifactId>
-        <version>1.0-beta-1</version>
+        <version>1.1-SNAPSHOT</version>
     </parent>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/1_0_beta_1/extscript-bundles/extscript20-assembly</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/branches/1_0_beta_1/extscript-bundles/extscript20-assembly</developerConnection>
-        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/tags/1_0_beta_1/extscript-bundles/extscript20-assembly</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-bundles/extscript20-assembly</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-bundles/extscript20-assembly</developerConnection>
+        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/trunk/extscript-bundles/extscript20-assembly</url>
     </scm>
 
     <build>
@@ -139,19 +139,19 @@
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
             <artifactId>extscript-core</artifactId>
-            <version>1.0-beta-1</version>
+            <version>1.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
             <artifactId>extscript-core-java6</artifactId>
-            <version>1.0-beta-1</version>
+            <version>1.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
             <artifactId>extscript-myfaces2-extensions</artifactId>
-            <version>1.0-beta-1</version>
+            <version>1.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
 
