--- a/extscript-core-root/extscript-core-java6/pom.xml
+++ b/extscript-core-root/extscript-core-java6/pom.xml
@@ -3,7 +3,7 @@
     <artifactId>extscript-core-java6</artifactId>
     <packaging>jar</packaging>
     <name>Core java6 part</name>
-    <version>1.0-beta-1</version>
+    <version>1.1-SNAPSHOT</version>
 
     <description>
         myfaces extension scripting java6 lib
@@ -12,13 +12,13 @@
     <parent>
         <groupId>org.apache.myfaces.extension-scripting</groupId>
         <artifactId>extscript-core-root</artifactId>
-        <version>1.0-beta-1</version>
+        <version>1.1-SNAPSHOT</version>
     </parent>
     
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/1_0_beta_1/extscript-core-root/extscript-core-java6</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/branches/1_0_beta_1/extscript-core-root/extscript-core-java6</developerConnection>
-        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/tags/1_0_beta_1/extscript-core-root/extscript-core-java6</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-core-root/extscript-core-java6</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-core-root/extscript-core-java6</developerConnection>
+        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/trunk/extscript-core-root/extscript-core-java6</url>
     </scm>
 
     <repositories>
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
             <artifactId>extscript-core</artifactId>
-            <version>1.0-beta-1</version>
+            <version>1.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>commons-beanutils</groupId>
