--- a/extscript-core-root/extscript-core/pom.xml
+++ b/extscript-core-root/extscript-core/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>extscript-core</artifactId>
-    <version>1.0-beta-1</version>
+    <version>1.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>MyFaces Extension Scripting Core</name>
 
@@ -12,13 +12,13 @@
     <parent>
         <groupId>org.apache.myfaces.extension-scripting</groupId>
         <artifactId>extscript-core-root</artifactId>
-        <version>1.0-beta-1</version>
+        <version>1.1-SNAPSHOT</version>
     </parent>
     
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/1_0_beta_1/extscript-core-root/extscript-core</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/branches/1_0_beta_1/extscript-core-root/extscript-core</developerConnection>
-        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/tags/1_0_beta_1/extscript-core-root/extscript-core</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-core-root/extscript-core</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-core-root/extscript-core</developerConnection>
+        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/trunk/extscript-core-root/extscript-core</url>
     </scm>
 
     <repositories>
