--- a/extscript-examples/pom.xml
+++ b/extscript-examples/pom.xml
@@ -3,7 +3,7 @@
     <artifactId>extscript-examples</artifactId>
     <packaging>pom</packaging>
     <name>examples submodule</name>
-    <version>1.0-beta-1</version>
+    <version>1.1-SNAPSHOT</version>
 
     <description>
         groovy myfaces core engine meta project
@@ -12,13 +12,13 @@
     <parent>
         <groupId>org.apache.myfaces.extension-scripting</groupId>
         <artifactId>extscript-root</artifactId>
-        <version>1.0-beta-1</version>
+        <version>1.1-SNAPSHOT</version>
     </parent>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/1_0_beta_1/extscript-examples</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/branches/1_0_beta_1/extscript-examples</developerConnection>
-        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/tags/1_0_beta_1/extscript-examples</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-examples</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-examples</developerConnection>
+        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/trunk/extscript-examples</url>
     </scm>
 
     <build>
